fixed descriptions in item navbar being cut off mid word

--- a/site/public/scss/_itemnav.scss
+++ b/site/public/scss/_itemnav.scss
@@ -46,7 +46,6 @@ $tab-padding: 8px;
         cursor: pointer;
         transition: 0.3s;
         vertical-align: top;
-        word-break: break-all;
 
         color: darken($secondary-color, 5%);
     }
